# machine-learning

./: .gitignore
cpp/: CMakeLists.txt
cpp/include/: matrix.hpp
cpp/src/: main.cpp
cpp/utils/: matrix.cpp
